# OpenAgri-Benchmark

./: .gitignore  Evaluations.md  README.md  example.env  pyproject.toml  stress_test_description.txt  test_offline.sh
bootstrapconfs/gk-fc/: docker-compose.override.yml
bootstrapconfs/gk-fc-pnd/: docker-compose.override.yml
bootstrapconfs/gk-fc-pnd/services_in_use/: gatekeeper.yml
bootstrapconfs/gk-fc/services_in_use/: farmcalendar.yml
bootstrapconfs/service-stress-test/fc/: .env  docker-compose.override.yml
bootstrapconfs/service-stress-test/fc/services_in_use/: farmcalendar.yml
bootstrapconfs/service-stress-test/pnd/: .env  docker-compose.override.yml
bootstrapconfs/service-stress-test/pnd/services_in_use/: pestmanagement.yml
bootstrapconfs/service-stress-test/wd/: docker-compose.override.yml  mocked_openmeteo.py
bootstrapconfs/service-stress-test/wd/services_in_use/: weatherservice.yml
openagri_benchmark/: auth.py  cli.py  conf.py  logger.py
openagri_benchmark/controller/: __init__.py  base.py
openagri_benchmark/data/: irrigation_data_90days.csv  pdm_data_90days.csv  reporting_data.py
openagri_benchmark/evaluations/: __init__.py  base.py  simple_eval.py
openagri_benchmark/evaluations/stress_test/: __init__.py  base.py  farmcalendar.py  irrigation.py  pestanddesease.py  pestanddisease.py  reporting.py  weather.py
openagri_benchmark/postprocessing/: StressTest.ipynb  utils.py
